Users and Auth API and readme changes for MongoDB.
