# server/server/api/controllers/auth/router.js
@@ -3,6 +3,4 @@ import controller from './controller';
 
 export default express
   .Router()
-  .post('/', controller.create)
-  .get('/', controller.all)
-  .get('/:id', controller.byId);
+  .post('/login', controller.login);
