# server/server/common/swagger/Api.yaml
@@ -5,8 +5,10 @@ info:
   description: Dear Diiary API
 basePath: /api/v1
 tags:
-  - name: Examples
-    description: Simple example endpoints
+  - name: Auth
+    description: Auth endpoints
+  - name: Users
+    description: User endpoints
   - name: Specification
     description: The swagger API specification
 
@@ -17,55 +19,106 @@ produces:
 
 
 definitions:
-  ExampleBody:
+  AuthBody:
     type: object
-    title: example
+    title: auth
+    require:
+      - email
+      - password
+    properties:
+      email:
+        type: string
+        example: user@gmail.com
+      password:
+        type: string
+        example: Password
+  UserBody:
+    type: object
+    title: user
     required:
       - name
+      - surname
+      - email
+      - password
     properties:
       name:
         type: string
-        example: no_stress
+        example: First Name
+      surname:
+        type: string
+        example: Last Name
+      email:
+        type: string
+        example: user@gmail.com
+      password:
+        type: string
+        example: Password
+      role:
+        type: string
+        example: role
+      image:
+        type: string
+        example: Image File Name
 
 paths:
-  /examples:
+  /users:
     get:
       tags:
-        - Examples
-      description: Fetch all examples
+        - Users
+      description: Fetch all users
       responses:
         200:
-          description: Returns all examples
+          description: Returns all users
     post:
       tags:
-        - Examples
-      description: Create a new example
+        - Users
+      description: Create a new user
       parameters:
-        - name: example
+        - name: user
           in: body
-          description: an example
+          description: a user
           required: true
           schema:
-            $ref: "#/definitions/ExampleBody"
+            $ref: "#/definitions/UserBody"
       responses:
         200:
-          description: Returns all examples
+          description: Returns all users
 
-  /examples/{id}:
+  /users/{id}:
     get:
       tags:
-        - Examples
+        - Users
       parameters:
         - name: id
           in: path
           required: true
-          description: The id of the example to retrieve
+          description: The id of the user to retrieve
           type: integer
       responses:
         200:
-          description: Return the example with the specified id
+          description: Return the user with the specified id
         404:
-          description: Example not found
+          description: User not found
+
+  /auth/login:
+    post:
+      tags:
+        - Users
+      description: Login current user
+      parameters:
+        - name: user
+          in: body
+          description: a user
+          required: true
+          schema:
+            $ref: "#/definitions/AuthBody"
+      responses:
+        200:
+          description: Login the user successfully
+        404:
+          description: Login user not found
+        500:
+          description: System failure.
 
   /spec:
     get:
